--- a/Basic World/index.html
+++ b/Basic World/index.html
@@ -22,6 +22,9 @@
 		<script language="javascript" type="text/javascript" src="sketch.js"></script>
 
 		<!-- custom styles -->
+
+    <!-- P5 Sound CDN -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.10/addons/p5.sound.min.js"></script>
 		<style>
 			body {
 				padding: 0;
@@ -38,7 +41,7 @@
 
         <img src="images/stonebrick.png" id="stonebrick">
 
-       
+
 
       </a-assets>
 
