--- a/Basic World/index.html
+++ b/Basic World/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Homework6</title>
+    <title>Party Castle</title>
     <!-- P5 libraries -->
 		<script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
 		<script language="javascript" type="text/javascript" src="libraries/p5.dom.js"></script>
@@ -40,8 +40,6 @@
         <img src="images/milkyway.jpg" id="sky">
 
         <img src="images/stonebrick.png" id="stonebrick">
-
-
 
       </a-assets>
 
