--- a/Basic World/index.html
+++ b/Basic World/index.html
@@ -41,7 +41,10 @@
 
         <img src="images/stonebrick.png" id="stonebrick">
 
-
+        <a-asset id="tree_obj" src = "images/Lowpoly_tree_sample.obj"></a-asset>
+        <a-asset id="tree_mtl" src = "images/Lowpoly_tree_sample.mtl"></a-asset>
+        <a-asset id="corner_obj" src = "images/corner/CORNER_OBJ.obj"></a-asset>
+        <a-asset id="corner_mtl" src = "images/corner/CORNER_OBJ.mtl"></a-asset>
 
       </a-assets>
 
