--- a/Basic World/index.html
+++ b/Basic World/index.html
@@ -46,6 +46,16 @@
         <a-asset id="corner_obj" src = "images/corner/CORNER_OBJ.obj"></a-asset>
         <a-asset id="corner_mtl" src = "images/corner/CORNER_OBJ.mtl"></a-asset>
 
+        <!--<a-asset id="courg" src="images/courage_apply.dae"></a-asset> -->
+
+        <a-asset id="horse_dae" src="images/horse_COLLADA.dae"></a-asset>
+        <a-asset id="dog_obj" src = "images/dog/Dog.obj"></a-asset>
+        <a-asset id="dog_mtl" src = "images/dog/Dog.mtl"></a-asset>
+
+        <a-asset id="balloon_dae" src="images/balloon/baloons.dae"></a-asset>
+        <a-asset id="balloon_obj" src = "images/balloon/baloons.obj"></a-asset>
+        <a-asset id="balloon_mtl" src = "images/balloon/baloons.mtl"></a-asset>
+
       </a-assets>
 
     <a-sky id="theSky" src="#sky" color="rgb(255,255,255)"></a-sky>
