--- a/Basic World/index.html
+++ b/Basic World/index.html
@@ -17,6 +17,8 @@
 
     <!-- Castle.js  -->
 		<script src="castle.js" type="text/javascript" ></script>
+      <script src="visualizer.js" type="text/javascript" ></script>
+      <script src="viz.js" type="text/javascript" ></script>
 
 		<!-- P5 Sketch -->
 		<script language="javascript" type="text/javascript" src="sketch.js"></script>
