--- a/Basic World/index.html
+++ b/Basic World/index.html
@@ -17,7 +17,7 @@
 
     <!-- Castle.js  -->
 		<script src="castle.js" type="text/javascript" ></script>
-      <script src="visualizer.js" type="text/javascript" ></script>
+      <script src="vizualizer.js" type="text/javascript" ></script>
       <script src="viz.js" type="text/javascript" ></script>
 
 		<!-- P5 Sketch -->
