--- a/Basic World/index.html
+++ b/Basic World/index.html
@@ -26,7 +26,7 @@
 		<!-- custom styles -->
 
     <!-- P5 Sound CDN -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.10/addons/p5.sound.min.js"></script>
+      <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.10/addons/p5.sound.min.js"></script> -->
 		<style>
 			body {
 				padding: 0;
